CHANGES
=======

3.12.4 (unreleased)
-------------------

- LP #131460: Make principal logging unicode safe.

3.12.3 (2010-04-30)
-------------------

- LP #209440: Don't obscure original exception when handling retries
  in ``publish.publish()`` with ``handleErrors == False``.   This change
  makes debugging such exception in unit tests easier.
  Thanks to James Henstridge for the patch.

- LP #98395: allow unicode output of XML content whose mimetype does not
  begin with ``text/``, per RFC 3023 as well as for content types ending
  in ``+xml`` such as Mozilla XUL's ``application/vnd+xml``.  Thanks to
  Justin Ryan for the patch.

3.12.2 (2010-04-16)
-------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest'.

- Fixed bug where xml-rpc requests would hang when served using
  paster.httpserver.

3.12.1 (2010-02-21)
-------------------

- BaseRequest.traverse should not call traversal hooks on elements
  previously traversed but wrapped in a security Proxy.

3.12.0 (2009-12-31)
-------------------

- Reverted change done in 3.6.2. The zope.authentication dependency has been
  removed again. The BasicAuthAdapter and FTPAuth adapters are now found in
  the new zope.login package.

3.11.0 (2009-12-15)
-------------------

- Moved EndRequestEvent and IEndRequestEvent from zope.app.publication into
  this package.

3.10.1 (2009-11-28)
-------------------

- Version 3.10.0 needs at least version 3.5 of zope.contenttype but it
  did not declare it.

3.10.0 (2009-10-22)
-------------------

- Moved the implementation of zope.publisher.contenttype to
  zope.contenttype.parse, leaving BBB imports and moving tests along.
  zope.contenttype is a new but light-weight dependency of this package.

- Supported Python 2.6 by keeping QUERY_STRING out of request.form if
  the method is a POST.  The original QUERY_STRING is still available if
  further processing is needed.
